--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello, World!</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Happy Birthday Sweety</title>
   </head>
+  <style type="text/css" media="all">
+    body{
+  padding: 25px;
+}
+.title {
+	color: #5C6AC4;
+}
+  </style>
   <body>
-      <h1 class="title">Hello World! </h1>
-      <p id="currentTime"></p>
-      <script src="script.js"></script>
+      <h1 class="title">Happy Birthday Sweety! </h1>
+      <img width="150" height="150" src="https://i.imgflip.com/43ka9k.jpg" alt="" />
+      <img src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/6b3fe963030867.5aa3707f0c627.gif" alt="" />
   </body>
 </html>
